--- a/css/estilo.css
+++ b/css/estilo.css
@@ -69,6 +69,10 @@ nav.navbar-transparente{
     color: black;
 }
 
+.carousel-control-next, .carousel-control-prev{
+    width: 5%;
+}
+
 .caixa{
     padding-top: 20px;
     padding-bottom: 20px;
